--- a/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
+++ b/src/app/views/products/managebrands/managebrands-table-popup/managebrands-table-popup.component.html
@@ -7,15 +7,15 @@
         <input
           matInput
           name="username"
-          [formControl]="itemForm.controls['brand']"
-          placeholder="Brand"
+          [formControl]="itemForm.controls['name']"
+          placeholder="Name"
         />
       </mat-form-field>
     </div>
     <div>
       <mat-form-field>
         <mat-label>Brand Category</mat-label>
-        <mat-select [formControl]="itemForm.controls['brandcategory']">
+        <mat-select [formControl]="itemForm.controls['brandcategory']" onchange="">
           <mat-option *ngFor="let topping of toppingList" [value]="topping">{{
             topping
           }}</mat-option>
@@ -47,9 +47,21 @@
     <div fxFlex="50" class="pr-1">
       <mat-form-field>
         <mat-label>Parent Category</mat-label>
-        <mat-select [formControl]="itemForm.controls['parentcategory']">
+        <mat-select [formControl]="itemForm.controls['parentcategory']" (selectionChange)="getSubCategories($event.value)">
           <mat-option
             *ngFor="let topping of parentCategory"
+            [value]="topping"
+            >{{ topping }}</mat-option
+          >
+        </mat-select>
+      </mat-form-field>
+    </div>
+    <div fxFlex="50" class="pr-1">
+      <mat-form-field>
+        <mat-label>Sub Category</mat-label>
+        <mat-select [formControl]="itemForm.controls['subcategory']">
+          <mat-option
+            *ngFor="let topping of subcategory"
             [value]="topping"
             >{{ topping }}</mat-option
           >
@@ -189,6 +201,192 @@
         Add
       </button>
     </div>
+
+<!---
+
+Requirements
+-->
+<div fxFlex="100"  class="pr-1">
+  <h1 matDialogTitle>Requirements</h1>   
+</div>
+
+<div fxFlex="25"  class="pr-1" >
+  
+  <mat-form-field class="example-full-width">
+    <input
+   
+    matInput
+    name="cnf"
+   
+    [formControl]="itemForm.controls['cnf']"
+    placeholder="CNF">
+      
+    </mat-form-field>
+  </div>
+
+  <div fxFlex="25"  class="pr-1">
+      <mat-form-field class="example-full-width">
+        <input
+        matInput
+        name="cnfarea"
+       
+        [formControl]="itemForm.controls['cnfarea']"
+        placeholder="Area">                  </mat-form-field>
+      </div>
+
+      <div fxFlex="25"  class="pr-1">
+        <mat-form-field class="example-full-width">
+          <input
+          matInput
+          name="cnfinvestment"
+         
+          [formControl]="itemForm.controls['cnfinvestment']"
+          placeholder="Investment">                    </mat-form-field>
+        </div>
+
+        <div fxFlex="25"  class="pr-1">
+          <mat-form-field class="example-full-width">
+            <input
+            matInput
+            name="cnfsalesteam"
+           
+            [formControl]="itemForm.controls['cnfsalesteam']"
+            placeholder="Sales Team">                      </mat-form-field>
+          </div>
+
+
+          <div fxFlex="25"  class="pr-1" >
+            <mat-form-field class="example-full-width">
+              <input
+            
+              matInput
+              name="distributor"
+             
+              [formControl]="itemForm.controls['distributor']"
+              placeholder="Distributor">
+                
+              </mat-form-field>
+            </div>
+
+            <div fxFlex="25"  class="pr-1">
+                <mat-form-field class="example-full-width">
+                  <input
+                  matInput
+                  name="distributorarea"
+                 
+                  [formControl]="itemForm.controls['distributorarea']"
+                  placeholder="Area">                  </mat-form-field>
+                </div>
+
+                <div fxFlex="25"  class="pr-1">
+                  <mat-form-field class="example-full-width">
+                    <input
+                    matInput
+                    name="distributorinvestment"
+                   
+                    [formControl]="itemForm.controls['distributorinvestment']"
+                    placeholder="Investment">                    </mat-form-field>
+                  </div>
+
+                  <div fxFlex="25"  class="pr-1">
+                    <mat-form-field class="example-full-width">
+                      <input
+                      matInput
+                      name="distributorsalesteam"
+                     
+                      [formControl]="itemForm.controls['distributorsalesteam']"
+                      placeholder="Sales Team">                      </mat-form-field>
+                    </div>
+
+
+                    <div fxFlex="25"  class="pr-1" >
+                      <mat-form-field class="example-full-width">
+                        <input
+                      
+                        matInput
+                        name="dealer"
+                       
+                        [formControl]="itemForm.controls['dealer']"
+                        placeholder="Dealer">
+                          
+                        </mat-form-field>
+                      </div>
+          
+                      <div fxFlex="25"  class="pr-1">
+                          <mat-form-field class="example-full-width">
+                            <input
+                            matInput
+                            name="dealerarea"
+                           
+                            [formControl]="itemForm.controls['dealerarea']"
+                            placeholder="Area">                  </mat-form-field>
+                          </div>
+          
+                          <div fxFlex="25"  class="pr-1">
+                            <mat-form-field class="example-full-width">
+                              <input
+                              matInput
+                              name="dealerinvestment"
+                             
+                              [formControl]="itemForm.controls['dealerinvestment']"
+                              placeholder="Investment">                    </mat-form-field>
+                            </div>
+          
+                            <div fxFlex="25"  class="pr-1">
+                              <mat-form-field class="example-full-width">
+                                <input
+                                matInput
+                                name="dealersalesteam"
+                               
+                                [formControl]="itemForm.controls['dealersalesteam']"
+                                placeholder="Sales Team">                      </mat-form-field>
+                              </div>
+
+                    <div fxFlex="25"  class="pr-1" >
+                      <mat-form-field class="example-full-width">
+                        <input
+                      
+                        matInput
+                        name="dealer"
+                       
+                        [formControl]="itemForm.controls['workshop']"
+                        placeholder="Workshop">
+                          
+                        </mat-form-field>
+                      </div>
+          
+                      <div fxFlex="25"  class="pr-1">
+                          <mat-form-field class="example-full-width">
+                            <input
+                            matInput
+                            name="dealerarea"
+                           
+                            [formControl]="itemForm.controls['workshoparea']"
+                            placeholder="Area">                  </mat-form-field>
+                          </div>
+          
+                          <div fxFlex="25"  class="pr-1">
+                            <mat-form-field class="example-full-width">
+                              <input
+                              matInput
+                              name="dealerinvestment"
+                             
+                              [formControl]="itemForm.controls['workshopinvestment']"
+                              placeholder="Investment">                    </mat-form-field>
+                            </div>
+          
+                            <div fxFlex="25"  class="pr-1">
+                              <mat-form-field class="example-full-width">
+                                <input
+                                matInput
+                                name="dealersalesteam"
+                               
+                                [formControl]="itemForm.controls['workshopsalesteam']"
+                                placeholder="Sales Team">                      </mat-form-field>
+                              </div>
+
+
+
     <div fxFlex="50"  class="pr-1">
         <h1 matDialogTitle>Contact Details</h1>    
         </div>
