--- a/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
+++ b/src/app/views/products/manageproducts/manage-table-popup/manage-table-popup.component.html
@@ -5,11 +5,11 @@
 
   
   <div fxFlex="50"  class="pr-1">
-    <mat-form-field class="full-width">
+    <mat-form-field class="full-width" >
       <input
       matInput
       name="name"
-     
+      (input)="onSearchChange($event.target.value)"
       [formControl]="itemForm.controls['name']"
       placeholder="Name">
     </mat-form-field>
@@ -19,9 +19,11 @@
   <div fxFlex="50"  class="pr-1">
     <mat-form-field class="full-width">
       <input
+      #slug
       matInput
       name="slug"
       [formControl]="itemForm.controls['slug']"
+   
       placeholder="Slug">
     </mat-form-field>
   </div>
@@ -40,12 +42,26 @@
 
    
     </div>
+    <div fxFlex="100">
+      <mat-form-field [style.width.px]=427>
+        <mat-select [formControl]="bankMultiCtrl" placeholder="Districts" [multiple]="true" #multiSelect>
+          <ngx-mat-select-search [formControl]="bankMultiFilterCtrl"
+          
+          placeholderLabel="Find District..." 
+          noEntriesFoundLabel="No matching district found"
+          ></ngx-mat-select-search>
+          <mat-option *ngFor="let bank of filteredBanksMulti | async" [value]="bank">
+            {{bank.name}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
     
-    <div  fxFlex="100"  class="pr-1" style="margin-top: 90px;">
+    <div  fxFlex="100"  class="pr-1" style="margin-top: 130px;">
         <mat-form-field [style.width.px]=327>
       <mat-label>Tags</mat-label>
       <mat-select [formControl]="itemForm.controls['tags']"  multiple>
-        <mat-option *ngFor="let topping of items_tags" [value]="topping">{{topping.name}}</mat-option>
+        <mat-option *ngFor="let topping of items_tags" [value]="topping.name">{{topping.name}}</mat-option>
       </mat-select>
     </mat-form-field>
   </div>
@@ -54,7 +70,7 @@
       <mat-form-field >
     <mat-label>Select Brand</mat-label>
     <mat-select [formControl]="itemForm.controls['brand']" >
-      <mat-option *ngFor="let topping of items_brands" [value]="topping">{{topping.name}}</mat-option>
+      <mat-option *ngFor="let topping of items_brands" [value]="topping.name">{{topping.name}}</mat-option>
     </mat-select>
   </mat-form-field>
 </div>
@@ -64,7 +80,7 @@
       <mat-form-field>
     <mat-label>Select Category</mat-label>
     <mat-select [formControl]="itemForm.controls['category']" (selectionChange)="getChildCategories($event.value)" >
-      <mat-option *ngFor="let topping of items_categories"  [value]="topping">{{topping.name}}</mat-option>
+      <mat-option *ngFor="let topping of items_categories"  [value]="topping.name">{{topping.name}}</mat-option>
     </mat-select>
   </mat-form-field>
 </div>
@@ -73,34 +89,14 @@
     <mat-form-field>
   <mat-label>Select SubCategory</mat-label>
   <mat-select [formControl]="itemForm.controls['subcategory']"  multiple>
-    <mat-option *ngFor="let topping of items_subcategories" [value]="topping">{{topping.name}}</mat-option>
+    <mat-option *ngFor="let topping of items_subcategories" [value]="topping.name">{{topping.name}}</mat-option>
   </mat-select>
 </mat-form-field>
 </div>
   
 
   
-  <div  fxFlex="50"  class="pr-1">
-     <mat-form-field>
-      <input
-      matInput
-      name="slug"
-      [formControl]="itemForm.controls['colour']"
-      placeholder="Colour">
-    </mat-form-field>
-  </div>
-  <div  fxFlex="50"  class="pr-1">
 
-       
-    <mat-form-field>
-      <mat-label>Sizes</mat-label>
-      <input
-      matInput
-      name="slug"
-      [formControl]="itemForm.controls['size']"
-      placeholder="Size">
-    </mat-form-field>
-  </div>
 
   
 
@@ -199,14 +195,14 @@
               
                  
                   </div>
-                  <div fxFlex="50"  class="pr-1" style="margin-top: 90px;">
+                  <div fxFlex="50"  class="pr-1" style="margin-top: 130px;">
                     <mat-form-field class="example-full-width">
                         <textarea matInput placeholder="Keywords"  [formControl]="itemForm.controls['seo_keywords']"></textarea>
                       </mat-form-field>
                     </div>
 
 
-                    <div fxFlex="50"  class="pr-1" style="margin-top: 90px;">
+                    <div fxFlex="50"  class="pr-1" style="margin-top: 130px;">
                       <mat-form-field class="example-full-width">
                           <textarea matInput placeholder="SEO Metaheading"  [formControl]="itemForm.controls['seo_metaheading']"></textarea>
                         </mat-form-field>
@@ -227,7 +223,7 @@
                     </div>
        
                     <div fxFlex="100" class="pr-1"></div>
-              <div fxFlex="100"class="pr-1" style="margin-top: 100px;">
+              <div fxFlex="100"class="pr-1" style="margin-top: 130px;">
                 <button mat-raised-button color="primary" type="submit" [disabled]="itemForm.invalid">{{"SAVE" | translate }}</button>
                 <span fxFlex></span>
                 <button mat-button color="warn" type="button" (click)="dialogRef.close(false)">Cancel</button>
