--- a/src/app/views/pages/availability/availability.component.html
+++ b/src/app/views/pages/availability/availability.component.html
@@ -28,7 +28,14 @@
           </ngx-datatable-column>
           <ngx-datatable-column name="Districts" [flexGrow]="1">
             <ng-template let-row="row" ngx-datatable-cell-template>
-              {{row?.districts.join(",")}}
+              {{row?.districts | availabilityDistricts}}
+            </ng-template>
+          </ngx-datatable-column>
+
+
+          <ngx-datatable-column name="State" [flexGrow]="1">
+            <ng-template let-row="row" ngx-datatable-cell-template>
+              {{row?.state}}
             </ng-template>
           </ngx-datatable-column>
 
