--- a/src/app/views/pages/availability/availabilitypopup/availabilitypopup.component.html
+++ b/src/app/views/pages/availability/availabilitypopup/availabilitypopup.component.html
@@ -20,6 +20,31 @@
     
 
     <div fxFlex="100">
+      <mat-form-field>
+        <mat-label>Business Profile</mat-label>
+        <mat-select [formControl]="itemForm.controls['businessprofile']" onchange="">
+          <mat-option *ngFor="let topping of businessprofile"  [value]="topping">{{
+            topping
+          }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+
+    <div fxFlex="100">
+      <mat-form-field>
+        <mat-label>States</mat-label>
+        <mat-select [formControl]="itemForm.controls['state']" onchange="">
+          <mat-option *ngFor="let topping of states"  [value]="topping">{{
+            topping
+          }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+
+    
+
+    <div fxFlex="100">
       <mat-form-field [style.width.px]=427>
         <mat-select [formControl]="bankMultiCtrl" placeholder="Districts" [multiple]="true" #multiSelect>
           <ngx-mat-select-search [formControl]="bankMultiFilterCtrl"
